reorganize app structure
Instead of having separate repository/, schema/, and service/ folders with duplicate file names, everything now lives under the content/ folder and package.

While I'm still not fully satisfied, it feels better than the previous mess.

GH-3
