# docs/swagger.yaml
@@ -1,41 +1,6 @@
 basePath: /api/v1
 definitions:
-  model.CategoryResponse:
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-    type: object
-  model.ChannelResponse:
-    properties:
-      category:
-        $ref: '#/definitions/model.CategoryResponse'
-      channel:
-        type: string
-      channel_id:
-        type: string
-      disabled_at:
-        type: string
-      disabled_until:
-        type: string
-      id:
-        type: string
-      last_fetch:
-        type: string
-      uploader_id:
-        type: string
-    type: object
-  model.ChannelSummary:
-    properties:
-      category:
-        $ref: '#/definitions/model.CategoryResponse'
-      channel:
-        type: string
-      id:
-        type: string
-    type: object
-  model.Pagination:
+  common.Pagination:
     properties:
       page:
         default: 1
@@ -51,34 +16,69 @@ definitions:
       total_rows:
         type: integer
     type: object
-  model.PaginationResponse-model_CategoryResponse:
+  common.PaginationResponse-content_CategoryResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/model.CategoryResponse'
+          $ref: '#/definitions/content.CategoryResponse'
         type: array
       pagination: {}
     type: object
-  model.PaginationResponse-model_ChannelResponse:
+  common.PaginationResponse-content_ChannelResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/model.ChannelResponse'
+          $ref: '#/definitions/content.ChannelResponse'
         type: array
       pagination: {}
     type: object
-  model.PaginationResponse-model_VideoResponse:
+  common.PaginationResponse-content_VideoResponse:
     properties:
       data:
         items:
-          $ref: '#/definitions/model.VideoResponse'
+          $ref: '#/definitions/content.VideoResponse'
         type: array
       pagination: {}
     type: object
-  model.VideoResponse:
+  content.CategoryResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  content.ChannelResponse:
+    properties:
+      category:
+        $ref: '#/definitions/content.CategoryResponse'
+      channel:
+        type: string
+      channel_id:
+        type: string
+      disabled_at:
+        type: string
+      disabled_until:
+        type: string
+      id:
+        type: string
+      last_fetch:
+        type: string
+      uploader_id:
+        type: string
+    type: object
+  content.ChannelSummary:
+    properties:
+      category:
+        $ref: '#/definitions/content.CategoryResponse'
+      channel:
+        type: string
+      id:
+        type: string
+    type: object
+  content.VideoResponse:
     properties:
       channel:
-        $ref: '#/definitions/model.ChannelSummary'
+        $ref: '#/definitions/content.ChannelSummary'
       display_id:
         type: string
       duration:
@@ -94,9 +94,9 @@ definitions:
       timestamp:
         type: string
       video_type:
-        $ref: '#/definitions/model.VideoType'
+        $ref: '#/definitions/content.VideoType'
     type: object
-  model.VideoType:
+  content.VideoType:
     enum:
     - regular
     - short
@@ -133,14 +133,14 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/model.PaginationResponse-model_CategoryResponse'
+            - $ref: '#/definitions/common.PaginationResponse-content_CategoryResponse'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.CategoryResponse'
+                    $ref: '#/definitions/content.CategoryResponse'
                   type: array
                 pagination:
-                  $ref: '#/definitions/model.Pagination'
+                  $ref: '#/definitions/common.Pagination'
               type: object
       summary: List categories
       tags:
@@ -169,14 +169,14 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/model.PaginationResponse-model_ChannelResponse'
+            - $ref: '#/definitions/common.PaginationResponse-content_ChannelResponse'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.ChannelResponse'
+                    $ref: '#/definitions/content.ChannelResponse'
                   type: array
                 pagination:
-                  $ref: '#/definitions/model.Pagination'
+                  $ref: '#/definitions/common.Pagination'
               type: object
       summary: List channels
       tags:
@@ -201,14 +201,14 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/model.PaginationResponse-model_VideoResponse'
+            - $ref: '#/definitions/common.PaginationResponse-content_VideoResponse'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/model.VideoResponse'
+                    $ref: '#/definitions/content.VideoResponse'
                   type: array
                 pagination:
-                  $ref: '#/definitions/model.Pagination'
+                  $ref: '#/definitions/common.Pagination'
               type: object
       summary: List videos
       tags:
