# internal/model/api/category.go
@@ -1,8 +1,0 @@
-package model
-
-import "github.com/google/uuid"
-
-type CategoryResponse struct {
-	ID   uuid.UUID `json:"id"`
-	Name string    `json:"name"`
-}
